# Video-RSS-Aggregator

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DEMO.md  DEMO_RECORDING_GUIDE.md  Dockerfile  ERROR_ANALYSIS_REPORT.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  RUST_SETUP_GUIDE.md  WINDOWS_SETUP.md  adapter_api.py  adapter_gui.py  adapter_rss.py  adapter_storage.py  audio_transcriber.py  bilibili_recommendations.py  check_rss_status.py  chinese_content_analyzer.py  cli.py  core_config.py  demo.bat  demo.sh  deploy.sh  docker-compose.yml  nginx.conf  optimized_backend.py  project_summary.txt  pyproject.toml  rate_limited_backend.py  real_data_extractor.py  rss_server_monitor.py  rss_service_wrapper.bat  rtx5090_incremental_backend.py  rtx5090_optimized_backend.py  (+19 more)
ai-service/: main.py  requirements.txt  summarizer.py  transcriber.py  vector_store.py
api-gateway/: Cargo.toml
api-gateway/sdks/python/: setup.py  video_aggregator_sdk.py
api-gateway/sdks/typescript/: package.json  video-aggregator-sdk.ts
api-gateway/src/: documentation.rs  gateway.rs  graphql.rs  main.rs  versioning.rs  webhooks.rs
audio-processor/: CMakeLists.txt
audio-processor/include/: audio_chunker.h  audio_extractor.h  audio_normalizer.h  audio_streamer.h  gpu_accelerator.h  vad_processor.h
audio-processor/src/: audio_extractor.cpp
audio-processor/src/cuda/: audio_kernels.cu
backends/: CMakeLists.txt
backends/src/: vra_backend.cpp
content-filter/: Cargo.toml
content-filter/src/: adult_filter.rs  keyword_filter.rs  main.rs  moderation.rs  quality_scorer.rs  recommendation.rs  spam_detector.rs
distributed-cache/: docker-compose.yml  init-cluster.sh
distributed-cache/cache-manager/: Cargo.toml
distributed-cache/cache-manager/src/: cache_manager.rs  cache_warmer.rs  consistency.rs  expiration.rs  main.rs  partitioner.rs  replication.rs
feed-service/: go.mod  main.go
frontend/: Dockerfile  nginx.conf  package.json  tailwind.config.js
gateway-service/: go.mod  go.sum  main.go
hardware-detector/: Cargo.toml  optimal_config.json
hardware-detector/src/: config.rs  cpu.rs  gpu.rs  lib.rs  memory.rs  profiler.rs  thermal.rs  types.rs
ingestion-service/: Cargo.toml  build.rs
ingestion-service/migrations/: 20240523000001_init.sql
ingestion-service/src/: db.rs  main.rs  metadata.rs  nats.rs  rss.rs
model-serving/: deploy.sh  docker-compose.triton.yml
performance-monitor/: Cargo.toml  sqlx-data.json
performance-monitor/src/: alerting.rs  collector.rs  dashboard.html  dashboard.rs  main.rs  optimizer.rs  predictor.rs  profiler.rs  regression_tester.rs
proto/: events.proto  feed.proto
realtime-streaming/: deploy-streaming.sh  docker-compose.kafka.yml
realtime-streaming/backpressure-controller/: Cargo.toml
realtime-streaming/backpressure-controller/src/: circuit_breaker.rs  flow_controller.rs  main.rs
realtime-streaming/event-pipeline/: Cargo.toml
realtime-streaming/event-pipeline/src/: event_bus.rs  main.rs  pipeline.rs  processors.rs  types.rs
realtime-streaming/webrtc-server/: Cargo.toml  Dockerfile  docker-compose.yml  nginx.conf
realtime-streaming/webrtc-server/src/: main.rs  server.rs  signaling.rs  streaming.rs  types.rs
rss-server/: Cargo.toml
rss-server/src/: cache.rs  concurrent.rs  config.rs  dedup.rs  main.rs  platforms.rs  qrcode_gen.rs  services.rs  websub.rs
rust-video-core/: Cargo.toml
rust-video-core/src/: bilibili.rs  cache.rs  content.rs  database (Arietids_DS's conflicted copy 2025-09-13).rs  database.rs  error.rs  extractor.rs  ffi.rs  gpu (Arietids_DS's conflicted copy 2025-09-13).rs  gpu_old (Arietids_DS's conflicted copy 2025-09-13).rs  lib (Arietids_DS's conflicted copy 2025-09-13).rs  lib.rs  main.rs  rss.rs  server.rs  transcription.rs  types.rs  video.rs
scripts/: setup_python.sh  test_pipeline.py
security/: Cargo.toml
security/src/: audit.rs  auth.rs  main.rs  middleware.rs  oauth.rs  rate_limit.rs  rbac.rs  validation.rs
src/: accel.rs  api.rs  auth.rs  config.rs  ffi.rs  main.rs  media.rs  pipeline.rs  rss.rs  setup.rs  storage.rs  summarize.rs  transcribe.rs  verify.rs
tests/: test_api_setup.py  test_config.py  test_ollama.py  test_project_layout.py  test_setup_studio_contract.py  test_setup_view_models.py  test_summarize_helpers.py
transcription-engine/: CMakeLists.txt  Cargo.toml  build.rs  whisper-turbo.pc.in
transcription-engine/include/: whisper_turbo.h
transcription-engine/src/: batch_processor.cpp  chinese_asr.cpp  lib.rs  model_selector.rs  quantization.cpp  streaming_engine.cpp  whisper_turbo.cpp
transcription-engine/src/cuda/: attention_kernels.cu  batch_kernels.cu  fused_kernels.cu  graph_executor.cu  quantize_kernels.cu
video-content-analyzer/: pyproject.toml
video-content-analyzer/video_analyzer/: __init__.py  content_moderator.py  keyframe_extractor.py  scene_analyzer.py  speaker_diarizer.py  subtitle_extractor.py  topic_segmenter.py
video-metadata-extractor/: Cargo.toml
video-metadata-extractor/src/: cache.rs  error.rs  extractor.rs  lib.rs  models.rs  proxy_manager.rs  rate_limiter.rs  url_parser.rs
video-rss-core/: Cargo.toml  README.md
video-rss-core/migrations/: 001_initial (Arietids_DS's conflicted copy 2025-09-13).sql  001_initial_schema.sql  20240101000001_initial_schema.sql
video-rss-core/src/: api.rs  benchmarks.rs  bilibili.rs  caiman_asr.rs  crdt_sync.rs  embeddings.rs  extractor.rs  fast_io.rs  lib.rs  monitor.rs  monitoring.rs  moonshine.rs  neural_compression.rs  python.rs  quantum_search.rs  realtime.rs  resilience.rs  rss.rs  server.rs  simd_optimizations.rs  summarizer.rs  tiered_cache.rs  transcription.rs  utils.rs  vector_db.rs  wasm_component.rs  whisper_candle.rs
video-rss-core/static/: index.html
video-rss-frontend/: README.md  package.json
video_rss_aggregator/: api.py  bootstrap.py  config.py  gui.py  rss.py  setup_view_models.py  storage.py
vra/: __main__.py  api.py  config.py  media.py  pipeline.py  rss.py  storage.py  summarize.py  transcribe.py
web-client/: index.html  package-lock.json  (+2 more)
(+94 files in other folders)
