[package]
name = "video-rss-aggregator"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
feed-rs = "1.4"
futures = "0.3"
libloading = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
