[project]
name = "video-rss-aggregator"
version = "0.1.0"
description = "Intelligent video summarization and RSS feed generation using Qwen3 models"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "qwen-asr[vllm]==0.0.6",
    "vllm==0.14.0",
    "torch==2.9.1",
    "fastapi==0.134.0",
    "uvicorn[standard]==0.41.0",
    "asyncpg==0.31.0",
    "httpx==0.28.1",
    "feedparser==6.0.12",
    "click==8.3.1",
    "yt-dlp==2026.2.21",
]

[project.scripts]
vra = "vra.__main__:cli"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["vra*"]
