[project]
name = "video-rss-aggregator"
version = "0.1.0"
description = "Video RSS summarization with Qwen 3.5 vision models and 8GB VRAM governance"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "aiosqlite==0.21.0",
    "fastapi==0.134.0",
    "uvicorn[standard]==0.41.0",
    "httpx==0.28.1",
    "feedparser==6.0.12",
    "click==8.3.1",
    "yt-dlp==2026.2.21",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "ruff==0.15.4",
]

[project.scripts]
vra = "cli:cli"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "vra",
    "cli",
    "core_config",
    "service_media",
    "service_ollama",
    "service_transcribe",
    "service_summarize",
    "adapter_gui",
    "adapter_api",
    "adapter_rss",
    "adapter_storage",
]

[tool.setuptools.packages.find]
include = ["video_rss_aggregator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".data",
    ".venv",
    ".venv-wsl",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
