[package]
name = "api-gateway"
version = "1.0.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }

# Web frameworks
axum = { version = "0.8", features = ["ws", "macros"] }
async-graphql = { version = "7.0.17", features = ["apollo_tracing", "log", "dataloader"] }
async-graphql-axum = "7.0.17"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
hyper = { version = "1.6", features = ["full"] }

# API Management
tonic = "0.14"
prost = "0.13"
utoipa = { version = "5.0", features = ["axum_extras"] }
utoipa-axum = "0.2"

# Authentication & Security
jsonwebtoken = "9.3"
oauth2 = "4.4"
argon2 = "0.5"

# Rate Limiting & Caching
governor = "0.10"
redis = { version = "0.32", features = ["tokio-comp", "cluster-async", "connection-manager"] }
moka = { version = "0.12", features = ["future"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
prometheus = "0.13"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
regex = "1.10"
lazy_static = "1.4"
async-trait = "0.1"
futures = "0.3"
bytes = "1.5"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# Load Balancing
weighted-rs = "0.1"

# Circuit Breaker
failsafe = "1.2"

# Configuration
config = "0.13"
dotenv = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }
rand = "0.8"

# Webhook Support
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
serde_urlencoded = "0.7"

[build-dependencies]
tonic-build = "0.14"

[[bin]]
name = "api-gateway"
path = "src/main.rs"