[package]
name = "content-filter"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Machine Learning
ort = { version = "2.0.0-rc.10", features = ["cuda", "tensorrt"] }
candle-core = { version = "0.3", features = ["cuda"] }
candle-nn = "0.3"
candle-transformers = "0.3"
tokenizers = { version = "0.15", features = ["http"] }

# NLP and Text Processing
whatlang = "0.16"
lingua = "1.6"
rust-bert = "0.21"
sentencepiece = "0.11"
stop-words = "0.8"
rust-stemmers = "1.2"
regex = "1.10"
unicode-segmentation = "1.10"
ammonia = "3.3"
html2text = "0.6"

# Image Processing
image = "0.24"
imageproc = "0.23"
photon-rs = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database and Storage
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.32", features = ["tokio-comp", "cluster-async"] }
elasticsearch = "8.5.0-alpha.1"

# Async and Utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Hashing and Similarity
simhash = "0.2"
minhash-rs = "0.2"
levenshtein = "1.0"
strsim = "0.11"

# Machine Learning Utilities
ndarray = { version = "0.15", features = ["serde"] }
ndarray-stats = "0.5"
statrs = "0.16"
linfa = "0.7"
linfa-clustering = "0.7"
linfa-reduction = "0.7"

# Bloom Filter for Deduplication
bloomfilter = "1.0"
cuckoofilter = "0.5"

# Performance
rayon = "1.8"
dashmap = "6.1"
lru = "0.12"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bin]]
name = "content-filter"
path = "src/main.rs"