[package]
name = "hardware-detector"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.32"
hwloc2 = "2.0"
nvml-wrapper = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.57", features = ["Win32_System_SystemInformation", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
system-configuration = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"
