[package]
name = "ingestion-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
feed-rs = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
async-nats = "0.34"
chrono = "0.4"
uuid = { version = "1.7", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.11"
