[package]
name = "performance-monitor"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
hyper = "1.0"

# Metrics and monitoring
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.21"
metrics-prometheus = "0.6"
metrics-exporter-prometheus = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async and utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.5", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }

# System monitoring
sysinfo = "0.29"
psutil = "3.2"

# Database and storage
redis = { version = "0.24", features = ["tokio-comp", "cluster-async"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Mathematical operations
statrs = "0.16"
ndarray = "0.15"

# Configuration
config = "0.13"

# Performance profiling
pprof = { version = "0.12", features = ["flamegraph", "protobuf-codec"] }

# Machine learning for predictions
linfa = "0.7"
linfa-linear = "0.7"


[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "performance-monitor"
path = "src/main.rs"