[package]
name = "performance-monitor"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.6"

# Metrics and monitoring
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.21"
metrics-prometheus = "0.6"
metrics-exporter-prometheus = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async and utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.18", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }

# System monitoring
sysinfo = "0.32"

# Database and storage
redis = { version = "0.32", features = ["tokio-comp", "cluster-async"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Mathematical operations
statrs = "0.16"
ndarray = "0.15"

# Configuration
config = "0.13"


# Machine learning for predictions
linfa = "0.7"
linfa-linear = "0.7"


[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "performance-monitor"
path = "src/main.rs"