[package]
name = "rss-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws", "http2"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "compression-full", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_xml_rs = "0.6"
quick-xml = { version = "0.31", features = ["serialize"] }

# RSS/Atom
rss = "2.0"
atom_syndication = "0.12"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "cluster-async"] }

# Caching
moka = { version = "0.12", features = ["future"] }
cached = { version = "0.46", features = ["async", "redis_store"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream", "gzip"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Configuration
config = "0.13"
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Rate limiting
governor = "0.6"

# Compression
flate2 = "1.0"
brotli = "3.4"

# QR code generation
qrcode = "0.14"
image = "0.24"

# WebSub/PubSubHubbub
hmac = "0.12"
sha2 = "0.10"

# Metrics
prometheus = "0.13"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# HTML parsing
scraper = "0.18"
ego-tree = "0.6"

# URL handling
url = "2.5"

# Deduplication
blake3 = "1.5"
dashmap = "5.5"

# Performance
rayon = "1.8"
parking_lot = "0.12"
crossbeam = "0.8"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[dev-dependencies]
axum-test = "14.0"
mockito = "1.2"
fake = { version = "2.9", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"

[[bench]]
name = "rss_generation"
harness = false