[package]
name = "rust-video-core"
version = "0.1.0"
edition = "2021"
authors = ["ArietidsZ <zhongzhibozzb@gmail.com>"]
description = "High-performance video analysis with multi-backend GPU acceleration"
license = "Apache-2.0"

[[bin]]
name = "video-cli"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Video processing - disabled due to FFmpeg version conflicts
# ffmpeg-next = "6.1"
image = "0.24"

# GPU backends - disable candle for now due to version conflicts
# candle-core = { version = "0.4", features = ["metal"] }
wgpu = "0.19"  # For Metal/Vulkan/DX12 support

# ML and transcription - disable candle for now
# candle-transformers = "0.4"
# candle-nn = "0.4"
hf-hub = { version = "0.3", features = ["tokio"] }
tokenizers = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Performance
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Testing
tempfile = "3.8"

# Metrics
prometheus = "0.13"

[features]
default = []
rocm = []  # ROCm support via HIP
openvino = []  # OpenVINO via FFI
metal = []  # Metal support via wgpu

[build-dependencies]
cc = "1.0"
cmake = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"