[package]
name = "video-rss-core"
version = "0.1.0"
edition = "2021"
authors = ["ArietidsZ <zhongzhibozzb@gmail.com>"]
description = "High-performance video RSS aggregator with AI transcription"
license = "Apache-2.0"

[lib]
name = "video_rss_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "cookies"] }

# RSS generation
rss = "2.0"
xml = "0.8"

# HTML parsing
scraper = "0.18"
select = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Performance
rayon = "1.8"
crossbeam = "0.8"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# URL parsing
url = "2.4"

# Regex
regex = "1.10"

# Base64 encoding/decoding
base64 = "0.21"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"], optional = true }

# Database (optional for caching)
sqlite = { version = "0.32", optional = true }

[features]
default = ["database"]
database = ["sqlite"]
python = ["pyo3", "pyo3-asyncio"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3