[package]
name = "security-service"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace", "auth"] }
hyper = "1.0"

# Authentication and Security
jsonwebtoken = "9.3"
argon2 = "0.5"
uuid = { version = "1.5", features = ["v4", "serde"] }
oauth2 = "4.4"
openidconnect = "3.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async and utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }

# Database and storage
redis = { version = "0.24", features = ["tokio-comp", "cluster-async"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Validation and sanitization
validator = { version = "0.16", features = ["derive"] }
ammonia = "3.3"

# Rate limiting
governor = { version = "0.6", features = ["std"] }
nonzero_ext = "0.3"

# Cryptography
ring = "0.17"
base64 = "0.22"

# Configuration
config = "0.13"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "security-service"
path = "src/main.rs"