[package]
name = "security-service"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "auth"] }
hyper = "1.6"

# Authentication and Security
jsonwebtoken = "9.3"
argon2 = "0.5"
uuid = { version = "1.18", features = ["v4", "serde"] }
oauth2 = "4.4"
openidconnect = "3.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async and utilities
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }

# Database and storage
redis = { version = "0.32", features = ["tokio-comp", "cluster-async", "connection-manager"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Validation and sanitization
validator = { version = "0.16", features = ["derive"] }
ammonia = "3.3"
regex = "1.10"
lazy_static = "1.4"
html-escape = "0.2"

# Rate limiting
governor = { version = "0.10", features = ["std"] }
nonzero_ext = "0.3"

# Cryptography
ring = "0.17"
base64 = "0.22"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

# Configuration
config = "0.13"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "security-service"
path = "src/main.rs"