[package]
name = "whisper-turbo"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
once_cell = "1.0"
ndarray = "0.15"
hound = "3.5"  # For WAV file reading
symphonia = { version = "0.5", features = ["all"] }  # Audio decoding

[build-dependencies]
cc = "1.0"
cmake = "0.1"

[features]
default = ["cuda"]
cuda = []
rocm = []
metal = []  # For Apple Silicon

[lib]
name = "whisper_turbo"
crate-type = ["cdylib", "rlib"]