[package]
name = "whisper-turbo"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
once_cell = "1.19"
ndarray = "0.15"
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }
prost = "0.13"
tonic = "0.12"
async-nats = "0.35"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1.6"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
cc = "1.0"
cmake = "0.1"
tonic-build = "0.12"

[features]
default = ["cuda"]
cuda = []
rocm = []
metal = []  # For Apple Silicon

[lib]
name = "whisper_turbo"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "transcription-service"
path = "src/bin/service.rs"