[package]
name = "video-metadata-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "cookies", "gzip", "brotli", "rustls-tls", "stream"] }
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# HTML/XML parsing
scraper = "0.17"
select = "0.6"
quick-xml = "0.31"

# URL handling
url = "2.5"
regex = "1.10"
urlencoding = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Caching
redis = { version = "0.24", features = ["aio", "tokio-comp", "connection-manager"] }
cached = { version = "0.46", features = ["async"] }

# Rate limiting
governor = "0.6"
tower = { version = "0.4", features = ["limit", "retry", "timeout"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Video/Audio metadata
mp4 = "0.14"
matroska = "0.28"

# Compression
flate2 = "1.0"

# Hashing
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"

# Base64
base64 = "0.21"

# Binary serialization
bincode = "1.3"

# Random
rand = "0.8"

# Futures
futures = "0.3"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Proxy support
proxy-agent = "0.3"

[dev-dependencies]
mockito = "1.2"
wiremock = "0.5"
criterion = "0.5"

# Benchmarks can be added later
# [[bench]]
# name = "extraction_bench"
# harness = false
