[package]
name = "video-rss-core"
version = "0.1.0"
edition = "2021"
authors = ["ArietidsZ <zhongzhibozzb@gmail.com>"]
description = "Video RSS aggregator with AI transcription"
license = "Apache-2.0"

[lib]
name = "video_rss_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "time", "fs", "macros", "net", "sync", "signal"] }
async-trait = "0.1"
futures = "0.3"

# HTTP client with connection pooling
reqwest = { version = "0.11", features = ["json", "cookies", "stream", "gzip", "brotli", "deflate", "trust-dns"] }

# Web framework - Axum with performance features
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "compression-gzip", "compression-br", "timeout", "limit"] }

# RSS generation
rss = "2.0"
xml = "0.8"
quick-xml = "0.31"

# HTML parsing
scraper = "0.18"
select = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Performance
rayon = "1.8"
crossbeam = "0.8"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# URL parsing
url = "2.4"

# Regex
regex = "1.10"

# Base64 encoding/decoding
base64 = "0.21"

# Environment variables
dotenv = "0.15"

# Process management
sysinfo = "0.30"

# Hashing for ETags
seahash = "4.1"

# ONNX Runtime for native speech recognition
ort = { version = "2.0.0-rc.10", features = ["ndarray", "load-dynamic"] }
ndarray = "0.15"

# Audio processing
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "ogg"] }

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"], optional = true }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "postgres", "chrono", "uuid", "json"], optional = true }

# Redis for caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "ahash"], optional = true }
bb8 = { version = "0.8", optional = true }
bb8-redis = { version = "0.15", optional = true }

# Circuit breaker and retry logic
tower-retry = "0.3"
backoff = { version = "0.4", features = ["tokio"] }

# Performance monitoring
prometheus = { version = "0.13", features = ["process"], optional = true }
metrics = { version = "0.21", optional = true }
metrics-exporter-prometheus = { version = "0.13", optional = true }

# Semaphore for rate limiting
arc-swap = "1.7"
governor = "0.6"
nonzero_ext = "0.3"

[features]
default = ["database", "redis", "metrics"]
database = ["sqlx"]
redis = ["dep:redis", "bb8", "bb8-redis"]
metrics = ["prometheus", "dep:metrics", "metrics-exporter-prometheus"]
python = ["pyo3", "pyo3-asyncio"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3